add google web font

--- a/app/styles/slides.sass
+++ b/app/styles/slides.sass
@@ -9,3 +9,9 @@
   position: relative
   padding: 50px 200px
   font-size: 50px
+
+h1, .h1
+  line-height: 1.3em
+  letter-spacing: -1px
+  margin-bottom: .5em
+  font-family: 'Oswald'
