add image render option

--- a/app/styles/slides.sass
+++ b/app/styles/slides.sass
@@ -24,4 +24,11 @@ h1.large
   font-size: 60px
 
 h1.normal
-  font-size: 100px    
+  font-size: 100px
+
+
+/* Images */
+.image img
+  max-width: 100%
+  border: 1px solid #666
+  padding: 2px
