add quote&cite content type

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -10,6 +10,7 @@ body, html
 body
   text-align: center
   color: #292929
+  font-family: 'Oswald', sans-serif
   background: -webkit-radial-gradient(center, circle closest-corner, #fff 0%, #e66d1a 100%)
 
 h1, h2, h3, h4, h5
