--- a/app/styles/slides.sass
+++ b/app/styles/slides.sass
@@ -65,3 +65,14 @@ h1.normal
 
 .quote cite::before
   content: '- '  
+
+
+/* Snippets */
+pre.prettyprint
+  text-align: left
+  font-size: 32px
+  font-family: monospace
+  margin-top: 1em
+  padding: 20px
+  max-height: 500px
+  overflow-y: scroll
